<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="br.com.aline.apps.MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" style="@style/TextAppearance.Material3.HeadlineLarge" android:layout_marginTop="30dp"
            app:layout_constraintVertical_bias="0.100000024" android:id="@+id/tv_title"/>
    <TextView
            android:text="@string/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_counter"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" android:layout_marginTop="20dp" android:textSize="34sp"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:tooltipText="Aumentar contador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true" app:srcCompat="@android:drawable/ic_input_add"
            android:id="@+id/floatingActionButton"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.21"
            android:contentDescription="@string/add_counter" app:layout_constraintStart_toEndOf="@+id/tv_counter"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.25"/>
    <Button
            android:text="@string/goto_imc"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:paddingVertical="5dp"
            style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
            android:layout_height="wrap_content" android:id="@+id/btn_goto_imc"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>