<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="br.com.aline.apps.CalculateBMI">

    <ImageView
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_width="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_height="40dp" android:id="@+id/iv_back"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:contentDescription="@string/back"/>
    <TextView
            android:text="@string/calculate_BMI"
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_calculate"
            app:layout_constraintTop_toBottomOf="@+id/iv_back" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"/>
    <EditText
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:textSize="18sp"
            android:hint="@string/weight_kg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/et_weight"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_calculate" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:minHeight="48dp"/>
    <EditText
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:textSize="18sp"
            android:hint="@string/height_m"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/et_heigth"
            android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/et_weight"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:minHeight="48dp"/>
    <Button
            android:text="@string/calculate"
            android:textSize="20sp"
            android:paddingVertical="5dp"
            style="@style/Widget.AppCompat.Button"

            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/btn_calculate"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_heigth" android:layout_marginTop="28dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_result"
            android:layout_marginTop="42dp"
            android:textStyle="bold"
            style="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintTop_toBottomOf="@+id/btn_calculate" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>